<resources>
    <string name="app_name">华容道逃亡</string>
    <string name="step_cost">步数：%d</string>
    <string name="step_sum">恭喜过关！共用了：%d 步！</string>
    <string name="left_button">重置</string>
    <string name="right_button">放弃</string>
    <string name="welcome">本关：【%s】</string>
    <string name="select_text">选择关卡</string>
    <string name="level_1">横刀立马</string>
    <string name="level_2">齐头并进</string>
    <string name="level_3">兵分三路</string>
    <string name="level_4">屯兵东路</string>
    <string name="level_5">壁垒森严</string>
    <string name="level_6">不惑之后</string>
    <string name="init_step">步数：0</string>
    <string name="timer_text">用时：</string>
    <string name="victory_logo">victory_logo</string>
    <string name="init_time">用时：00：00</string>
    <string name="begin_text">开始游戏</string>
    <string name="help_text">游戏帮助</string>
    <string name="exit_text">退出游戏</string>
    <string name="back_first_text">返回首页</string>
    <string name="help_title">游戏帮助</string>
    <string name="button_learned">我明白了</string>
    <string name="text_subTitle1">游戏来源</string>
    <string name="text_subContent1">华容道，古老的中国游戏，以其变化多端，百玩不厌的特点与魔方、独立钻石棋一起被国外智力专家并称为“智力游戏界的三个不可思议”。它与七巧板，九连环等中国传统益智玩具还有个代名词叫作“中国的难题”。华容道游戏取自著名的三国故事，曹操在赤壁大战中被刘备和孙权的“苦肉计”、“铁索连舟”打败，被迫退逃到华容道，又遇上诸葛亮的伏兵，关羽为了报答曹操对他的恩情，明逼实让，终于帮助曹操逃出了华容道。游戏就是依照“曹瞒兵败走华容，正与关公狭路逢。只为当初恩义重，放开金锁走蛟龙”这一故事情节。</string>
    <string name="text_subTitle2">游戏玩法</string>
    <string name="text_subContent2">通过移动各个棋子，帮助曹操从初始位置移到棋盘最下方中部，从出口逃走。不允许跨越棋子，还要设法用最少的步数把曹操移到出口。曹操逃出华容道的最大障碍是关羽，关羽立马华容道，一夫当关，万夫莫开。关羽与曹操当然是解开这一游戏的关键。四个刘备军兵是最灵活的，也最容易对付，如何发挥他们的作用也要充分考虑周全。“华容道”有一个带二十个小方格的棋盘，代表华容道。棋盘下方有一个两方格边长的出口，是供曹操逃走的。棋盘上共摆有十个大小不一样的棋子，它们分别代表曹操、张飞、赵云、马超、黄忠和关羽，还有四个小兵。“华容道”有几十种布阵方法，本游戏只选取了其中的六种玩法。棋盘上仅有两个小方格空着，玩法就是通过这两个空格移动棋子，用最少的步数把曹操移出华容道。这个玩具引起过许多人的兴趣，大家都力图把移动的步数减到最少。</string>
    <string name="button_reselect">重新选关</string>
</resources>