<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HelpActivity">

    <TextView
        android:id="@+id/help_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/help_title"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/help_bg"
        app:layout_constraintBottom_toTopOf="@+id/button_learned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_blank"
                android:layout_width="match_parent"
                android:layout_height="36dp" />

            <TextView
                android:id="@+id/text_subTitle1"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/text_subTitle1"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_subContent1"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/text_subContent1"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/text_subTitle2"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/text_subTitle2"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_subContent2"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:text="@string/text_subContent2"
                android:textColor="@android:color/background_light" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_learned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_bg2"
        android:text="@string/button_learned"
        android:textSize="18sp"
        android:onClick="onBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>